# syslog-ng-3.4-1

./: AUTHORS  configure.in
lib/: cfg-grammar.y  logwriter.c  ml-batched-timer.c  ml-batched-timer.h
lib/gtestutils/: gtestutils.c  gtestutils.h
modules/afsocket/: Makefile.am  afinet-dest.c  afinet-dest.h  afinet-source.c  afinet-source.h  afinet.c  afinet.h  afsocket-dest.c  afsocket-dest.h  afsocket-grammar.ym  afsocket-source.c  afsocket-source.h  afsocket.c  afsocket.h  afunix-dest.c  afunix-dest.h  afunix-source.c  afunix-source.h
modules/afsocket/tests/: Makefile.am  test_afsocket.c
tests/: collect-cov.sh
